Fix AcceleratorCommandsFullscreenBrowserTest for Mash.

The test doesn't actually pass in Mash because of crbug.com/897260
but the test should pass once
ImmersiveModeControllerAsh::OnWindowPropertyChanged is fixed.

Bug: 897260
Change-Id: Ic5914a4c1b17ba49a899f3775be5b21b2f6e1cff
Reviewed-on: https://chromium-review.googlesource.com/c/1297731
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602904}
Former-commit-id: 7768d47c0d737c0b9bd8a41166b9277f703cdf1e